--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,6 +85,7 @@ commands:
           command: |
             mvn -s .circleci/mvn-settings.xml -B help:effective-settings -Doutput=effective-settings.xml
             grep -n "<id>central</id>" effective-settings.xml || true
+            gpg --batch --list-secret-keys --keyid-format=long
       - run:
           name: Setup GPG for signing
           command: |
@@ -95,8 +96,7 @@ commands:
       - run:
           name: Publish to Sonatype Central (releases and SNAPSHOTs)
           command: |
-            SIGN_FLAGS="-Dgpg.keyname=\"$GPG_KEYNAME\" -Dgpg.passphrase=\"$GPG_PASSPHRASE\""
-            mvn -s .circleci/mvn-settings.xml -P release -B -T4 --no-transfer-progress -DskipTests $SIGN_FLAGS deploy
+            mvn -s .circleci/mvn-settings.xml -P release -B -T4 --no-transfer-progress -DskipTests -Dgpg.keyname=$GPG_KEYNAME -Dgpg.passphrase=$GPG_PASSPHRASE deploy
       - save_cache:
           paths:
             - ~/.m2
