--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,13 +109,9 @@ commands:
           keys:
             - v1-dependencies-{{ checksum "pom.xml" }}
       - run:
-          name: Run Maven Package (Release Candidate)
+          name: Publish Release Candidate to Maven Central
           command: |
-            mvn -s .circleci/mvn-settings.xml -T4 --no-transfer-progress package
-      - store_artifacts:
-          path: */target/*.jar
-          destination: rc-artifacts
-          when: always
+            mvn -s .circleci/mvn-settings.xml -P release -B -DskipTests -Dgpg.keyname=$GPG_KEYNAME -Dgpg.passphrase=$GPG_PASSPHRASE deploy
 
   install_asciidoctor:
     steps:
