--- a/pom.xml
+++ b/pom.xml
@@ -307,6 +307,16 @@
                </execution>
             </executions>
          </plugin>
+         <!-- Version management plugin for automated version setting in CI -->
+         <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>versions-maven-plugin</artifactId>
+            <version>2.16.2</version>
+            <configuration>
+               <generateBackupPoms>false</generateBackupPoms>
+               <allowSnapshots>true</allowSnapshots>
+            </configuration>
+         </plugin>
          <plugin>
             <groupId>com.amashchenko.maven.plugin</groupId>
             <artifactId>gitflow-maven-plugin</artifactId>
