Implement automated version management with versions-maven-plugin
- Remove old version-helper.sh script
- Add versions-maven-plugin configuration to pom.xml
- Integrate calculate-version.sh script into CircleCI workflows
- Implement manage_version and create_github_release commands
- Support GitFlow versioning: RC increments, hotfix patches, develop bumps
- Automated version management for all branch types

--- a/qqq-backend-module-api/pom.xml
+++ b/qqq-backend-module-api/pom.xml
@@ -30,7 +30,7 @@
    <parent>
       <groupId>com.kingsrook.qqq</groupId>
       <artifactId>qqq-parent-project</artifactId>
-      <version>${revision}</version>
+      <version>0.27.0-SNAPSHOT</version>
    </parent>
 
    <properties>
@@ -43,7 +43,7 @@
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-backend-core</artifactId>
-         <version>${revision}</version>
+         <version>0.27.0-SNAPSHOT</version>
       </dependency>
 
       <!-- Common deps for all qqq modules -->
