--- a/qqq-backend-module-sqlite/pom.xml
+++ b/qqq-backend-module-sqlite/pom.xml
@@ -30,7 +30,7 @@
    <parent>
       <groupId>com.kingsrook.qqq</groupId>
       <artifactId>qqq-parent-project</artifactId>
-      <version>${revision}</version>
+      <version>0.27.0-SNAPSHOT</version>
    </parent>
 
    <properties>
@@ -43,7 +43,7 @@
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-backend-module-rdbms</artifactId>
-         <version>${revision}</version>
+         <version>0.27.0-SNAPSHOT</version>
       </dependency>
 
       <!-- 3rd party deps specifically for this module -->
