--- a/qqq-middleware-javalin/pom.xml
+++ b/qqq-middleware-javalin/pom.xml
@@ -30,7 +30,7 @@
    <parent>
       <groupId>com.kingsrook.qqq</groupId>
       <artifactId>qqq-parent-project</artifactId>
-      <version>${revision}</version>
+      <version>0.27.0-SNAPSHOT</version>
    </parent>
 
    <properties>
@@ -46,24 +46,24 @@
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-backend-core</artifactId>
-         <version>${revision}</version>
+         <version>0.27.0-SNAPSHOT</version>
       </dependency>
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-openapi</artifactId>
-         <version>${revision}</version>
+         <version>0.27.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-backend-module-rdbms</artifactId>
-         <version>${revision}</version>
+         <version>0.27.0-SNAPSHOT</version>
          <scope>test</scope>
       </dependency>
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-language-support-javascript</artifactId>
-         <version>${revision}</version>
+         <version>0.27.0-SNAPSHOT</version>
          <scope>test</scope>
       </dependency>
 
