--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
    <groupId>com.kingsrook.qqq</groupId>
    <artifactId>qqq-parent-project</artifactId>
-   <version>0.27.0-SNAPSHOT</version>
+   <version>${revision}</version>
    <packaging>pom</packaging>
 
    <name>QQQ - Low-code Application Framework</name>
