--- a/qqq-backend-core/pom.xml
+++ b/qqq-backend-core/pom.xml
@@ -30,7 +30,7 @@
    <parent>
       <groupId>com.kingsrook.qqq</groupId>
       <artifactId>qqq-parent-project</artifactId>
-      <version>0.27.0-SNAPSHOT</version>
+      <version>${revision}</version>
    </parent>
 
    <properties>
