--- a/qqq-middleware-api/pom.xml
+++ b/qqq-middleware-api/pom.xml
@@ -30,7 +30,7 @@
    <parent>
       <groupId>com.kingsrook.qqq</groupId>
       <artifactId>qqq-parent-project</artifactId>
-      <version>0.27.0-SNAPSHOT</version>
+      <version>${revision}</version>
    </parent>
 
    <properties>
@@ -43,24 +43,24 @@
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-backend-core</artifactId>
-         <version>0.27.0-SNAPSHOT</version>
+         <version>${revision}</version>
       </dependency>
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-middleware-javalin</artifactId>
-         <version>0.27.0-SNAPSHOT</version>
+         <version>${revision}</version>
       </dependency>
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-openapi</artifactId>
-         <version>0.27.0-SNAPSHOT</version>
+         <version>${revision}</version>
       </dependency>
 
       <!-- qqq modules for tests only -->
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-middleware-javalin</artifactId>
-         <version>0.27.0-SNAPSHOT</version>
+         <version>${revision}</version>
          <classifier>tests</classifier>
          <type>test-jar</type>
          <scope>test</scope>
@@ -68,7 +68,7 @@
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-backend-module-rdbms</artifactId>
-         <version>0.27.0-SNAPSHOT</version>
+         <version>${revision}</version>
          <scope>test</scope>
       </dependency>
       <dependency>
