--- a/qqq-middleware-picocli/pom.xml
+++ b/qqq-middleware-picocli/pom.xml
@@ -30,7 +30,7 @@
    <parent>
       <groupId>com.kingsrook.qqq</groupId>
       <artifactId>qqq-parent-project</artifactId>
-      <version>0.27.0-SNAPSHOT</version>
+      <version>${revision}</version>
    </parent>
 
    <properties>
@@ -43,12 +43,12 @@
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-backend-core</artifactId>
-         <version>0.27.0-SNAPSHOT</version>
+         <version>${revision}</version>
       </dependency>
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-backend-module-rdbms</artifactId>
-         <version>0.27.0-SNAPSHOT</version>
+         <version>${revision}</version>
          <scope>test</scope>
       </dependency>
 
