--- a/qqq-middleware-slack/pom.xml
+++ b/qqq-middleware-slack/pom.xml
@@ -11,7 +11,7 @@
    <parent>
       <groupId>com.kingsrook.qqq</groupId>
       <artifactId>qqq-parent-project</artifactId>
-      <version>0.27.0-SNAPSHOT</version>
+      <version>${revision}</version>
    </parent>
 
    <properties>
@@ -24,13 +24,13 @@
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-backend-core</artifactId>
-         <version>0.27.0-SNAPSHOT</version>
+         <version>${revision}</version>
          <scope>compile</scope>
       </dependency>
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-middleware-javalin</artifactId>
-         <version>0.27.0-SNAPSHOT</version>
+         <version>${revision}</version>
          <scope>compile</scope>
       </dependency>
 
