--- a/qqq-openapi/pom.xml
+++ b/qqq-openapi/pom.xml
@@ -30,7 +30,7 @@
    <parent>
       <groupId>com.kingsrook.qqq</groupId>
       <artifactId>qqq-parent-project</artifactId>
-      <version>0.27.0-SNAPSHOT</version>
+      <version>${revision}</version>
    </parent>
 
    <properties>
@@ -44,7 +44,7 @@
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-backend-core</artifactId>
-         <version>0.27.0-SNAPSHOT</version>
+         <version>${revision}</version>
       </dependency>
 
       <!-- Common deps for all qqq modules -->
