--- a/qqq-sample-project/pom.xml
+++ b/qqq-sample-project/pom.xml
@@ -30,7 +30,7 @@
    <parent>
       <groupId>com.kingsrook.qqq</groupId>
       <artifactId>qqq-parent-project</artifactId>
-      <version>0.27.0-SNAPSHOT</version>
+      <version>${revision}</version>
    </parent>
 
    <properties>
@@ -44,27 +44,27 @@
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-backend-core</artifactId>
-         <version>0.27.0-SNAPSHOT</version>
+         <version>${revision}</version>
       </dependency>
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-backend-module-rdbms</artifactId>
-         <version>0.27.0-SNAPSHOT</version>
+         <version>${revision}</version>
       </dependency>
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-backend-module-filesystem</artifactId>
-         <version>0.27.0-SNAPSHOT</version>
+         <version>${revision}</version>
       </dependency>
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-middleware-javalin</artifactId>
-         <version>0.27.0-SNAPSHOT</version>
+         <version>${revision}</version>
       </dependency>
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-middleware-picocli</artifactId>
-         <version>0.27.0-SNAPSHOT</version>
+         <version>${revision}</version>
       </dependency>
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
