fix: Readded the duplicated checkout command in mvn-verify for the testonly code path

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,6 +106,7 @@ commands:
   ###############################################################################
   mvn_verify:
     steps:
+      - checkout
       - run:
           name: Run Maven Verify
           command: |
