fix: Readded the duplicated checkout command in mvn-verify for the testonly code path

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -145,6 +145,7 @@ commands:
   ###############################################################################
   check_middleware_api_versions:
       steps:
+        - checkout
         - run:
             name: Build and Run ValidateApiVersions
             command: |
@@ -378,6 +379,7 @@ jobs:
   publish_asciidoc:
     executor: localstack/default
     steps:
+      - checkout
       - install_asciidoctor
       - run_asciidoctor
 
