fix(circleci): Updated config to have test_only ignore v tags

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ workflows:
             branches:
               ignore: /(develop|main|release/.*|hotfix/.*|integration.*)/
             tags:
-              ignore: /(version|snapshot)-.*/
+              ignore: /(v|snapshot)-.*/
 
   publish_snapshot:
     jobs:
